--- a/ProjectPSX/ProjectPSX.csproj
+++ b/ProjectPSX/ProjectPSX.csproj
@@ -57,10 +57,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PSX\EX.cs" />
-    <Compile Include="PSX\CPU.cs" />
-    <Compile Include="PSX\MMU.cs" />
-    <Compile Include="PSX\ProjectPSX.cs" />
+    <Compile Include="Devices\Device.cs" />
+    <Compile Include="Devices\DMA.cs" />
+    <Compile Include="Core\EX.cs" />
+    <Compile Include="Core\CPU.cs" />
+    <Compile Include="Core\BUS.cs" />
+    <Compile Include="Core\ProjectPSX.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
