--- a/ProjectPSX/ProjectPSX.csproj
+++ b/ProjectPSX/ProjectPSX.csproj
@@ -64,12 +64,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\BIOS_Disassembler.cs" />
+    <Compile Include="Util\BIOS_Disassembler.cs" />
+    <Compile Include="Core\GTE.cs" />
+    <Compile Include="Devices\JOYPAD.cs" />
+    <Compile Include="Devices\CD.cs" />
     <Compile Include="Devices\CDROM.cs" />
     <Compile Include="Devices\GPU.cs" />
     <Compile Include="Devices\InterruptController.cs" />
     <Compile Include="Devices\TIMERS.cs" />
-    <Compile Include="Display.cs">
+    <Compile Include="Window.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Program.cs" />
