--- a/ProjectPSX/ProjectPSX.csproj
+++ b/ProjectPSX/ProjectPSX.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Devices\Controller.cs" />
     <Compile Include="Devices\DigitalController.cs" />
     <Compile Include="Devices\GPU.cs" />
+    <Compile Include="Devices\MDEC.cs" />
     <Compile Include="Util\BIOS_Disassembler.cs" />
     <Compile Include="Core\GTE.cs" />
     <Compile Include="Devices\JOYPAD.cs" />
@@ -90,6 +91,7 @@
     <Compile Include="Util\DoubleBufferedPanel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Util\MIPS_Disassembler.cs" />
     <Compile Include="Window.cs">
       <SubType>Form</SubType>
     </Compile>
