OpenTK: Update to 4.2

--- a/ProjectPSX.OpenTK/ProjectPSX.OpenTK.csproj
+++ b/ProjectPSX.OpenTK/ProjectPSX.OpenTK.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenTK" Version="4.0.0-pre9.10" />
+    <PackageReference Include="OpenTK" Version="4.2.0" />
   </ItemGroup>
 
   <ItemGroup>
