--- a/ProjectPSX.WinForms/ProjectPSX.WinForms.csproj
+++ b/ProjectPSX.WinForms/ProjectPSX.WinForms.csproj
@@ -7,6 +7,10 @@
     <DisableWinExeOutputInference>true</DisableWinExeOutputInference>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="NAudio" Version="1.10.0" />
   </ItemGroup>
