Project: .editorConfig dont add line on catch or finally

--- a/ProjectPSX/.editorconfig
+++ b/ProjectPSX/.editorconfig
@@ -92,8 +92,8 @@ csharp_style_inlined_variable_declaration = true:suggestion
 # New line preferences
 csharp_new_line_before_open_brace = none
 csharp_new_line_before_else = false
-csharp_new_line_before_catch = none
-csharp_new_line_before_finally = none
+csharp_new_line_before_catch =false
+csharp_new_line_before_finally =false
 csharp_new_line_before_members_in_object_initializers = none
 csharp_new_line_before_members_in_anonymous_types = none
 csharp_new_line_between_query_expression_clauses = none
