--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,11 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+
+################################################################################
+# ProjectPSX                                                                   #
+################################################################################
+
+# Ignore user-specific debug configurations
+launchSettings.json
